Add CSS on sections.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,28 @@
     <head>
         <meta charset='utf-8'>
         <title>Tab Menu</title>
+        <link rel='stylesheet' href='css/styles.css' type='text/css'>
     </head>
     <body>
-        aaa
+        <div class='container'>
+            <ul class='menu'>
+                <li><a href='#' class='active'>サイトの概要</a></li>
+                <li><a href='#'>サービス内容</a></li>
+                <li><a href='#'>お問い合わせ</a></li>
+            </ul>
+
+            <section class='content active'>
+                サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。サイトの概要です。
+            </section>
+            <section class='content'>
+                サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。サービス内容です。
+            </section>
+            <section class='content'>
+                お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。お問い合わせです。
+            </section>
+        </div>
+
+        <script src='js/main.js'>
+        </script>
     </body>
 </html>
